feat: :sparkles: Customer Register Functionality Completed

--- a/src/app/pages/admin-page/customer-management/customer-management.component.html
+++ b/src/app/pages/admin-page/customer-management/customer-management.component.html
@@ -35,7 +35,7 @@
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.city.name }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.customerContact.phone}}
                     </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.employee.name}}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.employee?.name}}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.user.username}}</td>
 
                 </tr>
