--- a/src/app/pages/admin-page/product-management/product-management.component.html
+++ b/src/app/pages/admin-page/product-management/product-management.component.html
@@ -25,6 +25,7 @@
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.sellPrice }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.supplierPrice || 'N/A' }}
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.img || 'N/A' }}
                     </td>
                 </tr>
                 }
