style: :lipstick: Navbar buttons functionality added

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="flex items-center justify-end w-full h-16 left-0 top-0 bg-navbar-gradient gap-x-7 px-7">
-    <a class="text-gray-50 font-bold">Home</a>
-    <a class="text-gray-50 font-bold">About us</a>
+    <a class="text-gray-50 font-bold"><button (click)="home()">Home</button></a>
+    <a class="text-gray-50 font-bold"><button (click)="aboutUs()">About us</button></a>
     <a class="text-gray-50 font-bold"><button (click)="logout()">Log out</button></a>
 </nav>
